Adding rdf:Bag support to dc:subject RDF keyword list.  Closes #1021025
(bzr r4823)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-04  Kees Cook  <kees@outflux.net>
+
+	* src/dialogs/rdf.h, src/dialogs/rdf.cpp: added rdf:Bag for the
+	  dc:subject keyword list.  Closed bug #1021025.
+
 2004-11-04  MenTaLguY  <mental@rydia.net>
 
 	* src/widgets/layer-selector.cpp: togglable images and formatting
