--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2004-11-07  MenTaLguY  <mental@rydia.net>
 
 	* src/gc-finalized.h: fix for Debian bug #279991 (cast to ptrdiff_t
-	                      rather than int)
+	                      rather than int), and basic documentation
 
 2004-11-06  MenTaLguY  <mental@rydia.net>
 
