--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-09  Kees Cook  <kees@outflux.net>
+
+	* src/dialogs/xml-tree.cpp: added better context to the status bar.
+	  added warning flash for id conflicts.
+
 2004-11-08  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/sp-item.h, src/sp-item.cpp
