--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-11  Kees Cook  <kees@outflux.net>
+
+    * src/seltrans.cpp, src/select-context.cpp: ref counting SPObjects
+	  correctly so undo's don't blow up an active resize/move.  Closes
+	  bug #1018756.
+
 2004-11-11  MenTaLguY  <mental@rydia.net>
 
 	* src/inkscape.cpp, src/main.cpp, src/widgets/icon.cpp:
