--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-12  MenTaLguY  <mental@rydia.net>
+
+	* src/main.cpp: fpresetsticky -> fpsetsticky
+
 2004-11-11  Kees Cook  <kees@outflux.net>
 
     * src/seltrans.cpp, src/select-context.cpp: ref counting SPObjects
